--- a/index.html
+++ b/index.html
@@ -39,9 +39,40 @@
 
   <div class="profileCard">
     <div class="profileCard__header">
-    </div>
-    <div class="profileCard__links"></div>
+      <div class="img_container">
+        <img
+          src="./assets/images/avatar-jessica.jpeg"
+          alt="Jessica"
+        >
+      </div>
 
+      <div class="infos_container">
+        <div class="infos_container__perso">
+          <h2>Jessica Randall</h2>
+          <p class="location">London, United Kingdom</p>
+        </div>
+        <div class="infos_container__description">
+          <p>"Front-end developer and avid reader."</p>
+        </div>
+      </div>
+    </div>
+    <div class="profileCard__links">
+      <button class="btn">
+        <a href="#">GitHub</a>
+      </button>
+      <button class="btn">
+        <a href="#">Frontend Mentor</a>
+      </button>
+      <button class="btn">
+        <a href="#">LinkedIn</a>
+      </button>
+      <button class="btn">
+        <a href="#">Twitter</a>
+      </button>
+      <button class="btn">
+        <a href="#">Instagram</a>
+      </button>
+    </div>
   </div>
 
   <!-- Jessica Randall
